snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha512
a3a9304e37d8743b52f9be750518c1baeee0aaab51144e766da2103b91d9dec03e88ed74874769d0cc48bcecd4765cbe0684ca67957bda03ce028733569233f0